# deepsearch

./: Cargo.toml  GEMINI.md  LICENSE  README.md
.github/workflows/: main.yml  publish.yml
src/: cli.rs  main.rs  ollama.rs  orchestrator.rs  parser.rs  prompts.rs  search.rs
