[package]
name = "deep_search_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.11.8"
ollama-rs = { version = "0.3.2", features = ["tokio"] }
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
schemars = "1.0"
scraper = "0.12"