[package]
name = "deepsearch"
version = "0.1.23"
edition = "2024"
description = "A CLI for AI-powered research assistance, using local LLMs to decompose questions, search the web, and synthesize answers."
license = "MIT"
homepage = "https://github.com/LightInn/deepsearch"
repository = "https://github.com/LightInn/deepsearch"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
ollama-rs = { version = "0.3.2", features = ["tokio"] }
thiserror = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "1.0"
scraper = "0.23"
inquire = "0.7.5"